<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color">

    <TextView
        android:id="@+id/headerText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_run_header"
        android:textAlignment="center"
        android:textColor="?attr/text_color"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/milesEntry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="150dp"
        android:background="?attr/fill_in_background"
        android:ems="10"
        android:hint="@string/distance_hint"
        android:inputType="number|numberDecimal"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <EditText
        android:id="@+id/timeEntryH"
        android:layout_width="65dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:background="?attr/fill_in_background"
        android:ems="10"
        android:hint="@string/hours_hint"
        android:inputType="number"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/milesEntry" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_shape"
        android:backgroundTint="?attr/button_color"
        android:text="@string/submit_btn"
        android:textColor="?attr/button_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionText" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_shape"
        android:backgroundTint="?attr/button_color"
        android:text="@string/back_btn"
        android:textColor="?attr/button_text_color"
        app:layout_constraintStart_toEndOf="@+id/submitButton"
        app:layout_constraintTop_toBottomOf="@+id/descriptionText" />

    <EditText
        android:id="@+id/timeEntryM"
        android:layout_width="65dp"
        android:layout_height="45dp"
        android:layout_marginTop="36dp"
        android:background="?attr/fill_in_background"
        android:ems="10"
        android:hint="@string/minutes_hint"
        android:inputType="number"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/timeEntryS"
        app:layout_constraintStart_toEndOf="@+id/timeEntryH"
        app:layout_constraintTop_toBottomOf="@+id/milesEntry" />

    <EditText
        android:id="@+id/timeEntryS"
        android:layout_width="65dp"
        android:layout_height="45dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="150dp"
        android:background="?attr/fill_in_background"
        android:ems="10"
        android:hint="@string/seconds_hint"
        android:inputType="number"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/milesEntry" />

    <EditText
        android:id="@+id/dateEntryM"
        android:layout_width="65dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:background="?attr/fill_in_background"
        android:ems="10"
        android:hint="@string/month_hint"
        android:inputType="number"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeEntryH" />

    <EditText
        android:id="@+id/dateEntryD"
        android:layout_width="65dp"
        android:layout_height="45dp"
        android:layout_marginTop="36dp"
        android:background="?attr/fill_in_background"
        android:ems="10"
        android:hint="@string/day_hint"
        android:inputType="number"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/dateEntryY"
        app:layout_constraintStart_toEndOf="@+id/dateEntryM"
        app:layout_constraintTop_toBottomOf="@+id/timeEntryM" />

    <EditText
        android:id="@+id/dateEntryY"
        android:layout_width="65dp"
        android:layout_height="45dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="150dp"
        android:background="?attr/fill_in_background"
        android:ems="10"
        android:hint="@string/year_hint"
        android:inputType="number"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeEntryS" />

    <ToggleButton
        android:id="@+id/toggleKm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_shape"
        android:backgroundTint="?attr/button_color"
        android:textColor="?attr/button_text_color"
        android:textOff="@string/miles"
        android:textOn="@string/kilometers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/milesEntry"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="4dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/colon"
        android:textColor="?attr/text_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/timeEntryM"
        app:layout_constraintStart_toEndOf="@+id/timeEntryH"
        app:layout_constraintTop_toBottomOf="@+id/milesEntry" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/colon"
        android:textColor="?attr/text_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/timeEntryS"
        app:layout_constraintStart_toEndOf="@+id/timeEntryM"
        app:layout_constraintTop_toBottomOf="@+id/milesEntry" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:text="@string/dash"
        android:textColor="?attr/text_color"
        android:textSize="28sp"
        app:layout_constraintEnd_toStartOf="@+id/dateEntryD"
        app:layout_constraintStart_toEndOf="@+id/dateEntryM"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:text="@string/dash"
        android:textColor="?attr/text_color"
        android:textSize="28sp"
        app:layout_constraintEnd_toStartOf="@+id/dateEntryY"
        app:layout_constraintStart_toEndOf="@+id/dateEntryD"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/descriptionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="150dp"
        android:background="?attr/fill_in_background"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/description_hint"
        android:inputType="textMultiLine"
        android:lines="5"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateEntryM" />

    <EditText
        android:id="@+id/titleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="150dp"
        android:background="?attr/fill_in_background"
        android:ems="10"
        android:hint="@string/title_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerText"
        android:textColor="@android:color/black" />

</androidx.constraintlayout.widget.ConstraintLayout>