<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/headerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/main_title"
            android:textAlignment="center"
            android:textColor="?attr/text_color"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@mipmap/run_logo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dataContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/headerTextMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:text="@string/display_main"
                android:textColor="?attr/text_color"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="?attr/fill_in_background"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/timeSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:entries="@array/spinnerItems"
                    android:spinnerMode="dialog" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/statsText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="36dp"
            android:textColor="?attr/text_color"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonsContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/runButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:fontFamily="sans-serif-medium"
                android:text="@string/enter_run_btn"
                android:textColor="?attr/button_text_color" />

            <Button
                android:id="@+id/viewButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:fontFamily="sans-serif-medium"
                android:text="@string/view_run_btn"
                android:textColor="?attr/button_text_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/weeklyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:fontFamily="sans-serif-medium"
                android:text="@string/weekly_btn"
                android:textColor="?attr/button_text_color" />

            <Button
                android:id="@+id/monthlyOverviewButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:fontFamily="sans-serif-medium"
                android:text="@string/monthly_btn"
                android:textColor="?attr/button_text_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/settingsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:fontFamily="sans-serif-medium"
                android:text="@string/settings_btn"
                android:textColor="?attr/button_text_color" />

            <Button
                android:id="@+id/stravaButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:fontFamily="sans-serif-medium"
                android:text="@string/settings_btn"
                android:textColor="?attr/button_text_color" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>